# sportradar-calendar

./: .dockerignore  .env.example  .gitignore  AI_Reflection.txt  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 9384f3370321_create_initial_tables_q_q_esf_q_exit_e_q.py
app/: database.py  main.py  models.py  schemas.py  seed.py
app/routers/: events.py
docs/: erd.md
frontend/: index.html  script.js  style.css
tests/: test_events.py
